Added support for 24bit colors, in and outside tmux. Changed theme on vim. Updated packages

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -1,2 +1,17 @@
 #Enable mouse mode
 set -g mouse on
+# Start windows and panes at 1, not 0
+set -g base-index 1
+setw -g pane-base-index 1
+
+# Enable 24 bit colorso
+# Use the xterm-256color terminal
+#set -g default-terminal "xterm"
+
+# Apply Tc
+#set-option -sa terminal-overrides ",xterm:Tc"
+#set -sa default-terminal "xterm-24bit"
+#set-option -sa terminal-overrides ',xterm-24bit:Tc'
+
+#set -s default-terminal "xterm-256color"
+#set-option -sa terminal-overrides ',xterm-256color:Tc'
