--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -6,7 +6,8 @@ setw -g pane-base-index 1
 
 # Enable 24 bit colorso
 # Use the xterm-256color terminal
-#set -g default-terminal "xterm"
+set -g default-terminal "xterm-24bit"
+set-option -ga terminal-overrides ',xterm-24bit:Tc'
 
 # Apply Tc
 #set-option -sa terminal-overrides ",xterm:Tc"
@@ -15,3 +16,101 @@ setw -g pane-base-index 1
 
 #set -s default-terminal "xterm-256color"
 #set-option -sa terminal-overrides ',xterm-256color:Tc'
+#
+#
+
+# Set monokai theme colors from https://gist.github.com/echelon/0679be63f2dddcb6ca6e921e8e6d8724
+# ---------------------------
+#     LAYOUT / STYLE
+# ---------------------------
+
+# Monokai is best theme. 
+# Adapted from: https://github.com/ZachMassia/dotfiles/blob/master/tmux.conf
+
+# Monokai/Molokai hex colors. 
+# http://www.colourlovers.com/lover/Monokai/colors 
+#   cyan - #00b9d7
+#   gold/brown - #abaa98
+#   green - #82cdb9
+#   off-white #f5f5f5
+#   orange - #f37259
+#   pink  - #ff3d70
+#   pink/magenta - #f7208b
+#   yellow - #f9f5c2
+
+
+# Denote window activity
+set-window-option -g monitor-activity on
+set-window-option -g window-status-activity-attr none
+
+# Clock
+set-window-option -g clock-mode-style 24
+set-window-option -g clock-mode-colour colour187 # monokai yellow
+
+# Status Bar Left
+set -g status-left '#[fg=colour187][#{session_name}] #I:#P | ' # requires color
+set -g status-left-length 70
+
+# Status Bar Window Title Tabs
+#set-option -g status-justify centre # justify the window tabs
+set-option -g status-justify left # justify the window tabs
+
+# Status Bar Colors
+set-option -g status-attr none
+set-option -g status-bg colour237 # slightly brighter than molokai vim tabs
+set-option -g status-fg colour187 # monokai yellow
+
+# Window Title Tab Colors
+#set-window-option -g window-status-attr none
+set-window-option -g window-status-bg '#3c3d37'  # brighter gray
+set-window-option -g window-status-fg '#f8f8f2' # monokai yellow
+#set-window-option -g window-status-current-attr none
+#set-window-option -g window-status-current-bg colour161 # monokai pink
+#set-window-option -g window-status-current-fg '#000000'
+set-window-option -g window-status-current-bg '#75715e'
+set-window-option -g window-status-current-fg '#e6db74'
+
+set -g window-style bg='#272822',fg='#f8f8f2'
+#set -g window-style-attr
+set -g window-active-style 'bg=#272822','fg=#f8f8f2'
+
+# Pane Border Colors
+set-option -g pane-active-border-bg '#101010'
+set-option -g pane-active-border-fg '#87d700'
+set-option -g pane-border-bg '#101010'
+set-option -g pane-border-fg '#505050'
+
+# TODO: Not sure what these are.
+set-option -g mode-bg '#000000'
+set-option -g mode-fg colour187 # monokai yellow
+set-option -g message-bg '#000000'
+set-option -g message-fg colour187 # monokai yellow
+
+
+############################################################
+######### Key bindings
+############################################################
+#
+# Turn off delay for escape
+set -s escape-time 0 # Vim escape cannot be laggy!
+
+
+
+# Smart pane switching with awareness of Vim splits.
+# See: https://github.com/christoomey/vim-tmux-navigator
+is_vim="ps -o state= -o comm= -t '#{pane_tty}' \
+    | grep -iqE '^[^TXZ ]+ +(\\S+\\/)?g?(view|n?vim?x?)(diff)?$'"
+bind-key -n C-h if-shell "$is_vim" "send-keys C-h"  "select-pane -L"
+bind-key -n C-j if-shell "$is_vim" "send-keys C-j"  "select-pane -D"
+bind-key -n C-k if-shell "$is_vim" "send-keys C-k"  "select-pane -U"
+bind-key -n C-l if-shell "$is_vim" "send-keys C-l"  "select-pane -R"
+bind-key -n C-\ if-shell "$is_vim" "send-keys C-\\" "select-pane -l"
+bind-key -T copy-mode-vi C-h select-pane -L
+bind-key -T copy-mode-vi C-j select-pane -D
+bind-key -T copy-mode-vi C-k select-pane -U
+bind-key -T copy-mode-vi C-l select-pane -R
+bind-key -T copy-mode-vi C-\ select-pane -l
+
+
+
+
